# llm-perf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/pr/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml  tag-release.yml
examples/: config.example.toml  mmlu-pro-opencompass.toml  mmlu-pro.toml
examples/scenarios/: basic.toml
scripts/: README.md  prepare_by_size.py
src/: admin.rs  benchmark.rs  cli.rs  client.rs  config.rs  kl_divergence.rs  lib.rs  logprobs.rs  main.rs  metrics.rs  report.rs  saturation.rs  snapshot.rs  stats.rs
src/mmlu_pro/: config.rs  dataset.rs  evaluate.rs  extract.rs  main.rs  prompt.rs  report.rs
